fix map zoom buttons z-index

--- a/src/components/Map/styles.scss
+++ b/src/components/Map/styles.scss
@@ -106,4 +106,8 @@
       }
     }
   }
+
+  .leaflet-top.leaflet-left {
+    z-index: 400;
+  }
 }
